--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 @@include('components/page-blocks/_head.html',{
 "lang":"en",
-"title":"",
+"title":"Step Project Cards",
 "description":"",
 "keywords":"",
 "favicon":"img/favicons/favicon",
@@ -9,7 +9,29 @@
 
 <body>
 	@@include('components/page-blocks/_header.html')
-	<main class="main"></main>
+	<main class="main">
+		<section class="filter-form">
+			<label for="visitTitle">Заголовок/вміст візиту:</label>
+			<input type="text" id="visitTitle">
+	
+			<label for="visitStatus">Статус (Open/Done):</label>
+			<select id="visitStatus">
+				<option value="Open">Open</option>
+				<option value="Done">Done</option>
+			</select>
+	
+			<label for="urgency">Терміновість візиту:</label>
+			<select id="urgency">
+				<option value="High">High</option>
+				<option value="Normal">Normal</option>
+				<option value="Low">Low</option>
+			</select>
+		</section>
+	
+		<section class="visits-list">
+			
+		</section>
+	</main>
 	@@include('components/page-blocks/_footer.html')
 	@@include('components/page-blocks/_scripts.html')
 </body>
