--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
 			</select>
 	
 			<label for="urgency">Терміновість візиту:</label>
-			<select id="urgency">
+			<select id="urgencyFilter">
 				<option value="High">High</option>
 				<option value="Normal">Normal</option>
 				<option value="Low">Low</option>
