--- a/src/index.html
+++ b/src/index.html
@@ -14,14 +14,9 @@
 			<label for="visitTitle">Заголовок/вміст візиту:</label>
 			<input type="text" id="visitTitle">
 	
-			<!-- <label for="visitStatus">Статус (Open/Done):</label>
-			<select id="visitStatus">
-				<option value="Open">Open</option>
-				<option value="Done">Done</option>
-			</select> -->
-	
 			<label for="urgency">Терміновість візиту:</label>
 			<select id="urgencyFilter">
+				<option value="Усі">Неважливо</option>
 				<option value="Невідкладна">Невідкладна</option>
 				<option value="Пріорітетна">Пріорітетна</option>
 				<option value="Звичайна">Звичайна</option>
